Set connect and read timeouts fore reading metadata from Maven central. Convert MavenVersionsTest to integration test.